# filevault

./: Cargo.toml  Justfile
impl_details/: HEADER.md
src/: consts.rs  main.rs
src/commands/: mod.rs  new.rs
src/vault/: header.rs  key_derivation.rs  mod.rs
