[package]
name = "filevault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
base64 = "0.21.0"
clap = { version = "4.2.2", features = ["derive"] }
color-eyre = "0.6.2"
derive_builder = "0.12.0"
libaes = "0.6.4"
lzma = "0.2.2"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }
secrecy = "0.8.0"
static_assertions = "1.1.0"
